--- a/README
+++ b/README
@@ -3,21 +3,27 @@ Overview
 =========
 
 airs_tiling is a package to rearrange AIRS L1c obs from a global
-sequential format to a global tiling, in which each tile has all
-the obs that fall within its boundaries, organized as 16-day sets.
-It also includes an unbuffered tiling function (for very slow tests
-of the buffering) and some functions to do tiled 16-day statistical
+sequential format to a global tiling, in which each tile has all the
+obs that fall within its boundaries, grouped as 16-day sets, with
+data remaining in time order for each tile.
+
+An "obs" is an observed radiance spectra along with some basic
+support info--for the AIRS tiling this is time, lat, lon, satellite
+and solar zenith angles, land fraction, and an ascending flag.
+
+The package includes support functions and demos that may be useful
+for user applications, an unbuffered tiling function (for very slow
+tests of the buffering) and functions to do tiled 16-day statistical
 summaries, predecessors to the all-channel tiling.
 
 Source Repos
 -------------
-
 https://github.com/motteler/airs_tiling.git
 https://github.com/motteler/chirp_test.git
 https://github.com/strow/ccast.git
 
 Main Files
-============
+===========
 
 AIRS tiling
 ------------
@@ -33,9 +39,10 @@ support and test
 -----------------
   write_buf     - buffered write for tile files
   airs_glist    - clean up an AIRS L1c directory
-  airs_flat     - flatten an AIRS granule into lists
+  airs_flat     - flatten an AIRS granule into obs lists
   read_airs_h4  - read an AIRS HDF4 granule (from CHIRP repo)
-  read_test*    - several tile file checks
+  read_test*    - basic tile read tests
+  tile_loop*    - read loop tile tests
   airsL1c2tile  - AIRS unbuffered tiling main function
 
 tile compression
@@ -89,4 +96,17 @@ examples:
 
  - initial netcdf file from a CDL spec
       ncgen -o ncgen_test.nc uw_sdr_test.cdl
+
+To Do
+======
+
+At some point in 2021 the tile compression scripts failed, due to
+problems with netCDF libs on the cluster.  This leaves the files
+around 40 pct larger than they would otherwise be.  This is probably
+not hard to fix but maybe not critical with the AIRS mission winding
+down.
+
+wnum, chan_qc, and rad_qc should probably be filled with nominal
+values.  It's possible that nedn and synth_frac could be taken from
+16 day averages, but it's not clear how useful that woule be.
 
